Updated Dashboard and Lost&Found Pages

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/lightofindia1/CollegeBuddy#readme",
   "dependencies": {
+    "apixu": "github:apixu/apixu-nodejs",
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
